2003-03-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (main): add an Application Name

2003-03-13  Bastien Nocera  <hadess@hadess.net>

	* data/emblem-multimedia.png: updated to another overlay image from
	Jakub Steiner <jimmac@ximian.com>

2003-03-13  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: upd
	* data/emblem-multimedia.png: added the multimedia emblem
	* src/totem-video-thumbnailer.c: (add_emblem_to_pixbuf),
	(save_pixbuf), (main): Hack the addition of an emblem on top of the
	thumbnailed video. Not really done properly as the metadata nautilus
	uses is nautilus-only for now (Closes: #105891)

2003-03-12  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/totem.c: (totem_setup_recent): don't show the icons in the most
	recently played files

2003-03-12  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am:
	* data/uri.glade: upd
	* src/totem.c: (on_open_location1_activate): added "File" -> "Open
	Location..." menu item with the corresponding dialog to allow
	URLs to be fed to Totem in a GUI way (Closes: #106916)

2003-03-12  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* data/uri.glade:
	* src/totem.c: (on_open1_activate), (open_location1_activate),
	(totem_callback_connect): started working at #106916, doesn't compile
	anymore, will fix in a mo

2003-03-12  Bastien Nocera  <hadess@hadess.net>

	* README: updated
	* src/gtk-playlist.c: (selection_changed): upd
	* src/totem.c: (totem_action_play), (totem_action_seek_relative),
	(commit_hide_skip_to): stop playback when there is an error playing

2003-03-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_fullscreen_toggle): set the window on top
	again when coming back from fullscreen

2003-03-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (on_volume_up1_activate),
	(on_volume_down1_activate), (totem_action_remote),
	(totem_action_handle_key), (totem_action_handle_scroll),