@@ -1,5 +1,15 @@
 2003-03-14  Bastien Nocera  <hadess@hadess.net>
 
+	* data/Makefile.am: upd
+	* data/emblem-multimedia.png: removed
+	* data/filmholes.png: added
+	* src/totem-video-thumbnailer.c: (add_emblem_to_pixbuf),
+	(save_pixbuf), (main): modify so it puts nice little holes like on
+	films cells. Thanks to Tuomas <tigert@ximian.com> for the idea and
+	the gfx
+
+2003-03-14  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem.c: (main): add an Application Name
 
 2003-03-13  Bastien Nocera  <hadess@hadess.net>
